# machulus

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefrag.am  README.md  build-tool-chain.sh  build_tool_chain.sh  compile_commands.json  configfrag.ac  configure.ac  grub.cfg.in  kernel.c  linker.ld  multiboot_memory_map.s  panic.c  roadmap.org  start.s  x86_64-elf-gcc.cmake
blog/: .dir-locals.el  bootstrap-emacs.el  building-the-kernel.org  example-page.org  index.org  publish.el
boot/: CMakeLists.txt  multiboot_available_ram.s  multiboot_memory_map_entry_next_page.s
i386/: boot.S
inc/: ctype.h  errno.h  file.h  memory.h  stdio.h  test.h
include/: errno.h  file.h  halt.h  panic.h  stdio.h  stdlib.h  string.h
include/kernel/: tty.h
include/machulus/: panic.h  tty.h
include/sys/: cdefs.h
iso/boot/grub/: grub.cfg
kernel/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefrag.am  aclocal.m4  config.status  configfrag.ac  configure  configure.ac  configure.scan  exception.c  gdt.c  gdt_install.S  halt.c  idt.c  kernel.c  kmain.c  linker.ld.in  malloc.c  panic.c  printf.c  serial.c  stdout.c  tty.c
kernel/arch/: Makefile  Makefile.am  Makefile.in
kernel/arch/i386/: Makefile  Makefile.am  Makefile.in  acpi.c  acpi.h  arch-init.c  boot.S  crti.S  frames.S  frames.c  frames.h  gdt.c  heap.c  kpage.S  kpage_init.S  linker.ld  multiboot.S  page-frames.c  paging.c  paging.h  tty.c
kernel/arch/x86/: Makefile  Makefile.am  acpi.c  acpi.h  arch-init.c  boot.S  exec.S  exec.h  frames.c  frames.h  gdt.S  gdt.c  gdt.h  heap.c  heap.h  idt.S  idt.c  idt.h  interrupt-handler.c  isr.S  isr.h  linker.ld.in  linker32.ld  mp.c  multiboot.h  paging.c  paging.h  tss.c  tss.h  tty.c
kernel/arch/x86/asm/: boot.S  boot32.S  gdt.S  paging-init.S  stage1.S  tss.S
kernel/arch/x86/include/arch/: cdefs.h
kernel/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
kernel/boot/: boot_gdt.S  boot_idt.S  boot_puts.S  multiboot_header.S  multiboot_header.c  start64.S
kernel/common/: Makefile.am  kmain.c  malloc.c  panic.c  printf.c
kernel/include/: config.h  cpu.h  errno.h  gdt.h  halt.h  panic.h  serial.h  stdio.h  stdlib.h  unistd.h
kernel/include/kernel/: panic.h
kernel/include/sys/: cdefs.h
kernel/nbproject/: configurations.xml  project.properties  project.xml
kernel/nbproject/private/: GNU_x86_ELF.properties  configurations.xml  private.xml
kernel/scripts/: KBuild.include  Makefile.build
kernel/x86_64/: Makefrag.am  configfrag.ac
libc/: CMakeLists.txt  configure.ac
libc/include/: locale.h  stdlib.h  stdnoreturn.h  string.h
libc/include/sys/: cdefs.h
libc/src/: Makefile.am
libc/src/locale/: Makefile.am  locale.c  localeconv.c  setlocale.c
libc/src/stdio/: fprintf.c  fputc.c  puts.c  vfprintf.c
libc/src/stdlib/: Makefile.am  abort.c  errno-location.c
libc/src/string/: Makefile.am  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strrchr.c
libc/stdio/: fputc.c  fputs.c  fwrite.c
newlib/: CMakeLists.txt  _exit.c  close.c  fstat.c  getpid.c  isatty.c  kill.c  lseek.c  read.c  sbrk.c  sys.c  write.c
res/: Doxyfile.in  grub.cfg.in  linker.ld.in
src/: Makefile.am  kernel.c  stdout.c
src/boot/: boot_gdt.S  boot_page_tables.S  multiboot_header.S  start.S  start32.S  start64.S
src/kernel/: CMakeLists.txt  Makefile.am  config.h.in  kernel.c
src/kernel/arch/i386/: boot.S  boot.s  crti.s  crtn.s  linker.ld  tty.c  vga.h
src/kernel/x86_64/: framebuffer.c  framebuffer.h  ldscript.S
src/libc/: CMakeLists.txt  Makefile.am
src/libc/errno/: errno.c
src/libc/stdio/: fprintf.c  fputs.c  printf-fspec.c  printf-fspec.h  printf.c  printf.h  puts.c  vfprintf.c  vprintf.c
src/libc/string/: memcpy.c
src/stdlib/stdio/: fwrite.c  printf.c  puts.c  vfprintf.c
src/stdlib/stdio/errno/: errno.c
stdlib/: Makefrag.am
stdlib/stdio/: fputc.c  fputs.c  printf.c  printf_parser.c  printf_parser.h  putchar.c  puts.c  snprintf.c  vfprintf.c  vprintf.c  vsnprintf.c
test/inc/: test.h
ubsan/: CMakeLists.txt  alignment_assumption.c  overflow.c  printf.c  type_mismatch.c  ubsan.c
ubsan/include/: ubsan.h
x86_64/: Makefrag.am  boot.S  configfrag.ac  early-idt.S  framebuffer.c  framebuffer.h  halt.c  init.c  kernel-exception-handler.c  ldscript.S  ldscript.h  page-frames.c  page-frames.h  stdout.c
