noinst_LIBRARIES=libk.a

libk_a_SOURCES = stdlib/abort.c \
		 string/memcmp.c \
		 string/memcpy.c \
		 string/memmove.c \
		 string/memset.c \
		 string/strlen.c \
		 stdio/fprintf.c \
		 stdio/fputc.c \
		 stdio/fputs.c \
		 stdio/printf-fspec.c \
		 stdio/printf.c \
		 stdio/printf.h \
		 stdio/puts.c \
		 stdio/vfprintf.c \
		 stdio/vprintf.c

libk_a_CFLAGS = $(CFLAGS) -D__is_libk
